# line-gpt-bot

./: README.md  deploy.yml  job_scrape.py  latest_match.txt  main.py  pyproject.toml  render.yaml  test_scrape.py
.devcontainer/: devcontainer.json
.github/cache/: match_info.txt
.github/workflows/: deploy.yml  manual_scrape.yml  scrape.yml  test_scrape.yml
cache/: debug_team_page.html  match_info.txt  team_page.html
