[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["your name <you@example.com>"]
packages = []

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
openai = "^1.75.0"
requests = "^2.32.3"
bs4 = "^0.0.2"
playwright = "^1.42.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
