[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
flask = "^2.3.3"  # ✅ 最新版でOK！
openai = "^1.16.1"  # ✅ OpenAI APIも追加！


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
